# coal_smash

./: .clang-format  .gitignore  CMakeLists.txt
include/: coal.h  coal_Be.h  coal_alpha.h  coal_deutron.h  config_parser.h  general_function.h  output_file.h  particle.h  read_config.h  read_particle_data.h  run.h
input/: config.ini
scripts/: plot.py  plotNoCen.py  plotOneCen.py  plotPtByCen.py  plotYieldByCen.py  plot_from_data.py
src/: coal.cpp  coal_Be.cpp  coal_alpha.cpp  coal_deutron.cpp  general_function.cpp  main.cpp  output_file.cpp  particle.cpp  read_config.cpp  read_particle_data.cpp  run.cpp
